--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -1788,3 +1788,146 @@ javascript ex 05 01~
 - 이 객체는 배열이 아니기 때문에 for...in 반복문을 사용하게되면 인덱스 번호에 포함되지 않은 프로퍼티 까지 반복되게 된다.
 - 그래서 일반적으로 for...of 반복문을 사용한다
 ex05 0번에서 끝까지
+
+# 12월 24일(ex06 - 1~)
+## 이벤트 다루기
+- 이벤트 발생할 때 호출되는 메서드
+  - 리스너(Listener) = 이벤트 핸들러(Event handler)
+- 이벤트 종류
+  - click 이벤트
+    - 태그 속성에 onclick 속성 넣기
+    ```javascript
+    ex1) 
+    <button onclick ="자바스크립트 코드">
+    //onclick에 직접 자바스크립트 코드 등록
+    ex2) 
+    <button id="btn1-2" onclick="btn1Click()">버튼1-2</button>
+      function btn1Click() {
+        var str = "Hello";
+        window.alert(str);
+        }//함수를 따로 등록해놓고 onclick에서 함수를 호출
+    ex3) 
+    var btn2 = document.getElementById("btn2");
+    // var btn2 = document.querySelector("#btn2")
+    btn2.onclick =f1;
+    둘 중 아무거나 사용하면 됨.
+    // btn2에 객체 멤버로 on클릭을 등록하는 방법
+    ex4)
+    btn2.onclick = function() {
+    var str = "Hello2b!";
+    window.alert(str);
+    console.log(this); 
+    //일반 함수에서 this가 가리키는 객체는 현재 소속된 객체(btn2)이다.
+    /* 익명함수를 정의하고 정의된 함수 객체
+    주소를 onclick이란 이름으로 btn2에 
+    저장하겠다는 의미(onclick에 직접저장하는 것 아님)*/
+    객체에 저장하는 속성 : property
+    속성 값 : value
+    ex5)
+    btn2.onclick = () => {
+      var str = "Hello2c!";
+      window.alert(str);
+      console.log(this);
+    }
+    //화살표 함수에서 this가 가리키는 객체는 window객체이다
+    ex6)
+    var btn3 = document.querySelector("#btn3");
+
+    btn3.addEventListener("click", btn3Click);
+    // 함수 정의 전에 함수를 호출해도 호이스팅 도기 때문에 상관 없다.
+    function btn3Click() {
+      var str = "Hi2!!";
+      window.alert(str);
+      console.log(this); // this는 btn3 객체이다.
+    } 
+    
+    ex7)
+      btn3.addEventListener("click", function() {
+      var str = "Hi2!!";
+      window.alert(str);
+      console.log(this); // this는 btn3 객체이다.
+    });
+
+    보통 한개의 이벤트만 등록할 때는
+    btn.onclick = () => {
+    }
+    방식을 자주 쓴다.
+    ```
+- 리스너 실행 순서
+  - 리스너를 등록할 때 한가지 종류로만 등록해야 유지보수가 용이하다.
+  - 태그에 직접 onclick을 등록하고, 태그 객체에 onclick을등록했다면 태그 객체에 등록한 것이 덮어쓴다.
+  ```javascript
+  우선순위1) btn1.onclick = () => {
+    var str = "Hello2";
+    window.alert(str);
+    };
+
+   우선순위2)btn1.addEventListener("click", () => {
+      var str = "Hello3";
+      window.alert(str);
+  });
+
+  우선순위3)<button id="btn1" onclick="var str='Hello1'; window.alert(str);">버튼1</button><br>
+  ```
+ ```javascript
+ <button id="btn1" onclick="btn1Click(event)">버튼1</
+ button><br>
+ 태그에 이벤드 객체이름은 (event)를 반드시 써야 한다
+ ```
+  - ***id가 부여된 태그는*** window 객체를 통해 바로 접근할 수 있다.
+  window.btn1.onclick = function() {
+	console.log("test..ok!");
+    }; 
+    하지만 window변수는 글로벌 변수이기 때문에 변수이름을 덮어 쓸수 있기 때문에 주의해야 한다.
+- 태그의 속성값 꺼내기
+  ```javascript
+  <button id="btn1" data-no="100">버튼1</button><br>
+  document.getElementById("btn1").addEventListener("click", function(e) {
+	console.log(this); 
+	console.log(this.getAttribute("data-no"));
+  console.log(this["data-no"])// 임의로 태그에 속성에 
+  //추가한 방법은 getAttribute없이 꺼낼 수 없다.
+  ------------------------------------------------
+    // arrow function인 경우 
+    // this는 window 객체를 가리킨다.
+ 
+  document.getElementById("btn1").addEventListener("click", (e) => {
+  console.log(this); // window 객체이다.
+  
+  // 그럼 arrow function(자바에서는 Lambda라 부른다)에서는 
+  // 이벤트가 발생된 객체를 알 수 없는가?
+  // => 있다!
+  //    이벤트 객체에 이벤트가 발생된 태그의 주소가 들어 있다.
+  console.log(e.target);
+  ```
+- 이벤트 발생과 전달 과정
+![](./images/2021-12-24-12-15-02.png)
+이 그림에서 HTML은 root element라고 한다.
+- d1 클릭하면 이벤트 리스너 호출된다, 거기서 실행이 끝나는게 아니라 부모 태그인 body태그로 다시가서 이벤트 리스너가 있는지 찾는다.
+- 찾으면 부모태그인 body태그의 이벤트리스너도 호출한다. -> 의도하지 않은 작업이 실행될 수 있다.
+![](./images/2021-12-24-12-24-20.png)
+![](./images/2021-12-24-12-23-49.png)
+d2만 클릭했는데 d1, body에 등록되어있는 이벤트리스너도 호출된다.
+  - target단계뿐만아니라, bubble단계에서도 이벤트리스너가 호출됨을 주의하자.
+  - 이를 막기위해서 stopPropagation(전파 중지)를 쓴다
+- 직접 이벤트 실행하지 않고 이벤트 발생시키기
+  ```javascript
+   <button id="btn1">버튼1</button>
+   document.getElementById("btn1").addEventListener(function(e){
+     var myEvent = new MouseEvent("click")
+     document.getElementById("btn2").dispatchEvent(myEvent)
+   })
+   document.getElementById("btn2").addEventListener("click", function(e) {
+    console.log("버튼2...");
+    });
+   btn2에 이벤트객체 myEvent를 dispatchEvent를 통해 보낸다
+   이렇게 하면 직접 btn2를 클릭하지 않아도 btn1을 눌렀을 때
+   btn2를 클릭하면 실행되는 작업이 수행되게 된다.
+  ```
+- 기본 작동을 막는 명령
+  - return false
+  - preventDefault  
+  - **주의** addEventListener()로 함수를 등록하면 return false 로 기본동작을 취소할 수 없다.
+  - onclick로 함수를 등록했을 때만 return false로 취소할 수 있다.
+  - preventDefault는 onclick, addEventListener 상관없이 기본동작 취소 가능하다.
+- button type 지정안하면 defalut가 submit이다
