--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -2312,3 +2312,80 @@ new Score("aaaa",100,90,80,80);
 new Score(80,90,100); -> 숫자만 3개받는 생성자는 존재하지 않기때문에 컴파일 오류 발생
 생성자가 여러개일 때 파라미터에 전달하는 값으로 호출할 생성자를 결정한다.
 ```
+
+# 22년 01월 05일(ex03 Exam0430~)
+
+- 생성자를 한 개라도 만들었다면 컴파일러는 기본 생성자를 만들지 않는다.
+- 파라미터가 있는 생성자를 만들었다면, 파라미터 갯수, 타입에 맞는 값을 호출해야 한다.
+- 생성자는 여러개 만들 수 있다. 여러개의 파라미터중 어떤 생성자를 호출할 지는 파라미터의 값으로 결정 한다.
+- 생성자 내에서만 다른 생성자를 호출할 수 있다. 일반 메서드에서는 다른 생성자를 호출할 수 없다.
+```java
+public static void main(String[] args) {
+this("오호라!")
+}
+```
+- 스태틱 변수는 자동으로 초기화되지만, 로컬 변수는 초기화 작업을 수행해야 사용할 수 있다.
+- 인스턴스 변수 또한 new() 작업을 수행하는 즉시 자동으로 초기화 된다.
+- 클래스는 스태틱 메서드를 호출할 때 클래스가 로딩된 상태가 아니라면 클래스를 로딩한다.
+- 클래스가 로딩되면 스태틱 초기화 블록이 실행된다.
+  - 클래스 로딩되는 경우
+    - 스태틱 필드나 스태틱 메서드 사용할 때
+    - new명령어 사용하여 인스턴스 생성할 때
+- 각각의 스태틱 블록에 있는 로컬변수가 이름이 같아도, JVM이 내부적으로 다른 주소의 변수로 관리하기 때문에 충돌이 일어나지 않는다. 
+- 작성된 순서대로 실행시킨다.
+- Exam 0670 
+ - static int a; 명령만 실행했을 때는 클래스 파일을 확인해보면 static블록이 없다.
+ ![](./images/2022-01-05-12-08-10.png)
+ - 하지만 static int a = 100; 명령을 하면 클래스파일에 static 블록이 생성된다
+ ![](./images/2022-01-05-12-07-29.png)
+ - static int a = 100; 문장은
+ - static int a
+    static {
+      a = 100;
+    }
+    이 문장으로 바뀐다
+
+- 인스턴스 초기화 블록
+  - 인스턴스 초기화 블록은 인스턴스 블록의 순서에 상관없이 생성자의 맨 앞부분에 삽입된다.
+  - 생성자가 여러개라면 모든 생성자 앞 부분에 자동으로 삽입된다. 
+  - 여러개의 초기화 블록이 있다면 작성된 순서대로 생성자 앞 부분에 삽입된다.
+  ```java 
+  static class A {
+    int a;
+    int b;
+    int c;
+    {
+      a = 100;
+      System.out.println("hello");
+    }
+    -> 생성자가 없을 때 
+    public A(){
+      a = 100;
+      System.out.println("hello");
+    }
+    ->인스턴스 블록은 사라지고 자동으로 생성된
+    기본 생성자 맨 앞부분에 인스턴스 블록의 내용이 오게 된다.
+    생성자가 존재할 때는 존재하는 모든 생성자의 앞부분에 인스턴스
+    블록의 내용이 삽입된다.
+    -----------------------------------
+    static class A{
+      int a;
+      int b;
+      int c;
+      A(){
+
+      }
+      A(int b){
+
+      }
+    }
+    여러개의 생성자가 있을 때는 모든 생성자에 인스턴스 블록 내용이
+    삽입된다.
+    --------------------------------------
+    여러개의 인스턴스 블록이 있는 경우 작성된 순서대로 생성자에 삽입된다.
+  ```
+- 변수 초기화 문장(인스턴스 필드)도 인스턴스 초기화 블록과 같은 기능을 한다.
+- 인스턴스 초기화블록, 인스턴스 필드 초기화 문장이 같이 존재할 경우 작성된 순서대로
+- 생성자 앞 부분에 삽입되게 된다.
+- 자바 컴파일러는 인스턴스 초기화 블록, 인스턴스 필드(변수) 초기화 문장을 만나면 
+- 종류 상관없이 생성자 앞부분에 복사한다.
