--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -2389,3 +2389,75 @@ this("오호라!")
 - 생성자 앞 부분에 삽입되게 된다.
 - 자바 컴파일러는 인스턴스 초기화 블록, 인스턴스 필드(변수) 초기화 문장을 만나면 
 - 종류 상관없이 생성자 앞부분에 복사한다.
+
+# 22년 01월 06일(ex04, basic ex02 : Exam0110~ -S tring class )
+- String은 문자열을 다루는 생성자 역할을 한다.
+- String은 그 자체로 인스턴스 역할을 하고, 불변 객체이다.
+- import java.util.Date;
+- Date d1 = new Date(); -> 날짜 얻는 코드
+- public static final int YEAR = 1; : public, static, final 은 modifier라고 한다.
+- Immutable 객체와 String
+  - new String("abc") : 처음 객체를 만들면 그 객체에 들어있는 값을 변경할 수 없다.
+  - 즉, String 객체는 Imuutable(불변)객체이다.
+  - primitive type과 wrapper 클래스
+    - int -> java.lang.Integer
+    - byte -> java.lang.Byte
+    - short -> java.lang.Short
+    - long -> java.lang.Long
+    - float -> java.lang.Float
+    - double -> java.lang.Double
+    - boolean -> java.lang.Boolean
+    - char -> java.lang.Char
+## String 클래스 사용법
+- String 리터럴은 상수풀에 같은 문자열의 인스턴스가 있다면 그 인스턴스의 주소를 리턴한다.
+```java
+String x1 = "Hello";
+Srring x2 = "Hello";
+x1 == x2; -> true
+주소는 같고 인스턴스의 값을 비교하기 때문
+```
+- String 인스턴스는 인스턴스를 생성할 때마다 다른 주소값이 할당된다.
+```java
+String s1 = new String("Hello");
+String s2 = new String("Hello");
+s1 == s2 -> false
+s1, s2의 메모리 주소가 다르기 때문에 
+```
+- intern()
+  - String 객체에 들어있는 문자열과 동일한 문자열을 String constant pool에서 찾는다.
+  - 찾으면 가지고 있는 문자열의 주소값을 리턴한다.
+  - 없으면 String constant pool에 String 객체를 생성하고 그 주소값을 리턴한다.
+  ```java
+  String s1 = new String("Hello");
+  String s2 = s1.intern(); // s2에는 s1에 생성된 String 인스턴스Hello가 없기 때문에 pool영역에 String객체 생성하고 주소값 리턴
+  String s3 = "Hello";  
+  s2 == s3 -> true
+  s1 == s2 -> false
+  ```
+- equals
+```java
+String s1 = new String("Hello");
+    String s2 = new String("Hello");
+    System.out.println(s1 == s2); ->false
+    System.out.println(s1.equals(s2)); ->true
+    equals는 문자열 자체를 비교한다.(대소문자 구분)
+    // 대소문자 구분없이 문자열을 비교하고 싶다면,
+    System.out.println(s1.equalsIgnoreCase(s2));
+```
+exam 122,123은 상속 배운후에 할것
+- Spring Boot와 객체들
+  - 1) Spring Boot 실행
+  - 2) App 클래스가 소속된 패키지를 찾는다.
+  - 3) @Componentm, @controller, @RestController 등의 어노테테이션이 붙은
+  클래스를 찾아 인스턴스를 생성한다
+  - 4) 생성한 인스턴스를 빈컨테이너(Bean Container - 객체의 생성, 소멸을 관리)에 보관한다.
+  - 5) @Controller 또는 @RestController가 붙은 클래스에서 @RequestMapping, @GetMapping, @PostMapping 관련 
+  메서드를 분석하여 요청처리 정보를 준비한다.
+  - 6) 요청이 들어오면 요청처리 메서드(request handler)를 호출한다.
+
+- 스프링부트 시작 -> 톰캣서버 시작(웹서버 + 서블릿컨테이너) -> 스프링 빈 컨테이너 시작 -> 패키지 탐색하여 객체 생성
+- 웹서버에 요청( ex - /board/add ) -> 서블릿컨테이너에 전달하여 프론트 컨트롤러(디스패치 서블릿)실행 ->스프링빈 컨테이너에 요청처리기 요구 ->요청처리기 리턴(페이지컨트롤러 ex - BoardController) ->프론트 컨트롤러가 Board에 객체생성하고 값저장 -> 프론트 컨트롤러에서 보드컨트롤러에 메서드 호출 (ex- add()) :프론트 컨트롤러에서 저장한 값이 호출한 메서드의 파라미터로 들어감 -> 메서드 실행
+![](./images/2022-01-06-14-53-53.png)
+- 생성자 호출되면 인스턴스가 생성됨
+
+## 
