--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -2460,4 +2460,20 @@ exam 122,123은 상속 배운후에 할것
 ![](./images/2022-01-06-14-53-53.png)
 - 생성자 호출되면 인스턴스가 생성됨
 
-## 
+## 2022년 01월 07일
+- Java 클래스에 setter메서드가 없으면 스프링부트가 파라미터를 전달받지 못해서 클라이언트가 요청한 객체 값을 처리할 수 없다.
+- 클라이언트에서 보내는 데이터는 모두 String이다.
+
+## 요청 파라미터(요청할 때 보내는 데이터)와 객체 매핑
+- add?title=a&author=b.... ->스프링부트에 요청 -> 스프링부트는 파라미터 값을 객체에 담는다
+  스프링부트는 new Book()객체를 생성 -> 요청 파라미터값을 객체에 저장 : title = a -> setTitle("a")
+  요청된 파라미터 이름으로 세터 메서드를 찾은후 값을 저장한다.
+- 날짜 파라미"터 값 변환
+  - "2021-1-1" -> Date.valueOf(2022-1-1). valueof는 Date객체
+  - 날짜가 빈문자열 일 때 -> Date.valueOf() : 요청 파라미터는 있지만 값이 없는 경우(readDate ="") 그 파라미터의 값은 빈 문자열이 된다. 
+  - 실행오류 발생. 빈 문자열은 Date객체로 만들 수 없기 때문. -> readDate 파라미터가 없으면 setReadDate()를 호출할 필요가 없다. 따라서 값을 변환할 이유가 없어서 실행 오류 발생하지 않음.
+
+## 데이터를 파일로 출력하기 : 텍스트로 출력
+
+
+- DOM : 태그를 다룰 때 사용하는 API
