--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -1660,6 +1660,7 @@ var obj = {
   //객체에 함수를 포함시킬 수 있다.
   ```
 
+
 # 12월 22일
 - 생성자
   - 함수 호출시 new로 초기화 하면 this.을 사용할 수 있다.(new명령으로 함수 호출 시 생성자 함수)
@@ -2460,7 +2461,7 @@ exam 122,123은 상속 배운후에 할것
 ![](./images/2022-01-06-14-53-53.png)
 - 생성자 호출되면 인스턴스가 생성됨
 
-## 2022년 01월 07일
+# 2022년 01월 07일
 - Java 클래스에 setter메서드가 없으면 스프링부트가 파라미터를 전달받지 못해서 클라이언트가 요청한 객체 값을 처리할 수 없다.
 - 클라이언트에서 보내는 데이터는 모두 String이다.
 
@@ -2474,6 +2475,39 @@ exam 122,123은 상속 배운후에 할것
   - 실행오류 발생. 빈 문자열은 Date객체로 만들 수 없기 때문. -> readDate 파라미터가 없으면 setReadDate()를 호출할 필요가 없다. 따라서 값을 변환할 이유가 없어서 실행 오류 발생하지 않음.
 
 ## 데이터를 파일로 출력하기 : 텍스트로 출력
-
+- FileWriter에 문자열(String객체)을 주면 지정된 파일로 출력한다.
 
 - DOM : 태그를 다룰 때 사용하는 API
+
+
+# 2022년 01월 10일
+- 상속(기능 확장을 위해 필요) : 기존 코드의 기능을 그대로 가져오면서, 새 기능추가
+```java
+class A{
+  f1()
+  f2()
+}
+class B {
+  f3()
+}
+B obj = new B();
+obj.f3() => B의 f3()호출
+obj.f2() => A의 f2()호출
+obj.f1() => A의 f1()호출
+-> 상속은 B클래스가 A클래스의 코드를 가지고 있는 것이 아니라
+A의 코드를 찾아서 사용하는 것.
+```
+- 상속 문법과 용어 
+```java
+class Calculator{
+  plus()
+  minus()
+} - 기준
+class Calculator2{
+  multiple()
+} - sub class
+class Calculator3{
+  divide()
+} - child
+```
+- Java의 모든 클래스는 Object의 Sub클래스다.
