--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -2481,7 +2481,8 @@ exam 122,123은 상속 배운후에 할것
 
 
 # 2022년 01월 10일
-- 상속(기능 확장을 위해 필요) : 기존 코드의 기능을 그대로 가져오면서, 새 기능추가
+  
+  ## 상속(기능 확장을 위해 필요) : 기존 코드의 기능을 그대로 가져오면서, 새 기능추가
 ```java
 class A{
   f1()
@@ -2511,3 +2512,5 @@ class Calculator3{
 } - child
 ```
 - Java의 모든 클래스는 Object의 Sub클래스다.
+  
+  ##
