--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -2512,5 +2512,111 @@ class Calculator3{
 } - child
 ```
 - Java의 모든 클래스는 Object의 Sub클래스다.
-  
-  ##
+
+# 2022년 01월 11일
+## 상속 문법(OOP - ex05 a : Exam01~)
+- 상속 : 기능 확장을 위한 문법
+class Car
+maker
+model
+capacity
+run()
+
+
+- 기존 코드에 계속 코드를 추가하는 방식
+  - Project1, Project2, Project3이 위의 클래스를 사용할 때 새로운 신규 프로젝트 Project4가 새로운 기능이 필요한 경우
+  -  기존 Car class에 새필드, 새 메서드 추가하거나 변경하게 되면 기존 Car class를 사용했던 새로운 신규 프로젝트 Project1, 2, 3에 영향을 끼치게 된다.
+  - 기존 코드를 손대는 것은 위험하다.
+  - 상속을 사용하지 않고 기능을 추가하려면 기존 코드를 수정해야 하기 때문에 예기치 않은 오류가 발생할 수 있다.
+  - 코드를 계속 추가하다보면 쓰지 않는 코드가 누적 되는 문제가 발생한다.
+![](./images/2022-01-11-10-18-59.png)
+
+- 기존 코드를 복제하여 새 기능을 추가하는 방식
+  - Car class를 그대로 복제해 각 Project에 필요한 기능만 추가하여 각각의 class를 사용.
+    - 기존 코드를 변경하지 않기 때문에 기존 Project에 영향을 끼치지 않는다.
+    - 하지만 기존 class 코드 자체에 문제가 있다면 복사한 모든 class를 수정해야 한다.
+    - 기존 코드가 없다면 불가능하다.
+  ![](./images/2022-01-11-10-17-41.png)
+
+- 상속을 받는 클래스를 하위 클래스(서브 클래스), 상속을 해주는 클래스를 부모 클래스(수퍼 클래스) 라고 한다.
+- 상속의 범위는 부모클래스의 필드(변수)와 메서드이다.
+- private로 설정된 필드, 메서드는 상속 불가하다.
+- super클래스는 sub클래스의 자원을 사용할 수 없다.
+- sub클래스는 super클래스의 자원을 사용할 수 있다.
+```java
+class 자식클래스명 extends 부모클래스명 {
+}
+```
+- 하나의 자식클래스가 여러 부모클래스로부터 상속을 받는 것은 불가하다.
+- 하지만 하나의 부모클래스는 여러 자식에게 상속이 가능하다.
+- 상속은 기존 코드를 수정하면 상속받은 모든 클래스에 자동으로 적용된다.
+ ![](./images/2022-01-11-10-54-53.png)
+ ![](./images/2022-01-11-10-58-55.png)
+
+- 상속 ex - OOP.ex05.package a,b,c,d
+  ![](./images/2022-01-11-11-11-08.png)
+  - 메서드 시그니쳐 = 메서드 형식(메서드명, 리턴타입, 파라미터)
+  - 오버라이딩 시 @Override annotation을 붙이는 것이 실수를 줄일 수 있다..(컴파일러에게 메서드 재정의를 옳바르게 했는지 검사 요청)
+  - 상속은 새 class를 만들지만, 기존 코드를 수동으로 복사하지 않고 extends 명령을 통하여 기존 class의 코드를 찾아서 사용한다. 새로운 필드(변수)를 추가하고 기존의 메서드를 재정의한다(오버라이딩)
+  - 메서드 재정의 시에는 메서드 시그니쳐(형식) 즉, 메서드의 파라미터, 이름, 리턴타입이 일치해야 한다.
+  **주의**
+  - 오버로딩(Overloading)은 기존 클래스에 없던 메서드를 정의.
+  - 오버라이딩(Overiding)은 상속받은 메서드의 내용만 변경하는것.
+- ex) A,B,C 클래스가 있다
+  B클래스는 A클래스를 상속, C클래스는 B클래스를 상속.
+  -> B클래스는 A클래스의 자원 사용가능. C클래스는 A와B의 자원 모두 사용가능.
+
+- 상속 시 생성자 실행 순서
+  - GrandFa, Fa, Son 클래스가 있다
+    - Son은 Fa클래스를 상속 받았고, Fa클래스는 GrandFa클래스를 상속 받았다. 
+    - Son에 super(); 명령을 하게 되면 Son의 super클래스인 Fa의 생성자를 호출한다
+    - 그 후 Fa클래스가 상속받은 super클래스가 있는지를 또 찾는다. 
+    - Fa는 GrandFa 클래스를 상속 받았기 때문에 GrandFa 클래스의 생성자를 찾아서 호출한 후GrandFa클래스의 생성자를 실행한후 , Fa생성자 실행, 다시 Son의 생성자로 돌아와서 실행한다.
+      - 상속받은 super클래스가 없을 때까지 super클래스를 찾아 올라가 생성자를 호출한후, 최상위 class의 생성자를 실행한후 차례대로 내려오면서 생성자를 실행한다.
+    - 이러한 이유 때문에 객체지향의 작업 처리 속도가 다소 느려지는 것이다.
+    ![](./images/2022-01-11-11-47-09.png)
+  - 수퍼클래스, 서브클래스 인스턴스 생성과정
+    - A,B클래스가 있다. B클래스는 A클래스를 상속받았다.
+      - B의 수퍼클래스(A)를 먼저 로딩한다. 
+      - A클래스가 로딩되면 스태틱 필드를 생성하고 스태틱 블록을 실행한다.
+      - 그 후 B클래스를 로딩한다
+      - B의 스태틱필드를 생성한 후 스태틱 블록을 실행한다.
+      ![](./images/2022-01-11-12-53-31.png)
+
+- 상속의 개념은 서브 클래스가 수퍼 클래스의 코드를 복사해오는 것이 아니다.
+- 서브 클래스에는 수퍼 클래스의 코드가 없다.
+- 서브 클래스에서 수퍼 클래스의 코드를 사용하기 위해선, 수퍼 클래스의 클래스 파일이 존재해야 한다.
+- 상속과 수퍼클래스 생성자(OOP.ex05.h)
+![](./images/2022-01-11-15-07-03.png)
+    -> 수퍼 클래스의 어떤 생성자를 설정하지 않으면 컴파일러는 수퍼클래스의 기본생성자를 호출한다.
+    -> 이 때 수퍼클래스에 기본 생성자가 존재하지 않으면 컴파일 에러가 발생하게 된다.
+    -> 그래서 기본 생성자가 수퍼클래스에 존재하지 않을 때 직접 어떤 생성자를 호출할지 지정해줘야 한다.
+
+## 다중상속
+![](./images/2022-01-11-15-37-25.png)
+- Java에서는 다중상속을 허락하지 않는다.
+
+- 상속 : 전문화(Specialization)와 일반화(Generalization)
+![](./images/2022-01-11-15-46-11.png)
+ 수퍼 클래스에서 상속받아 기능을 덧붙여서 특별한 역할을 수행하는 서브 클래스를 만드는 것을 전문화.
+ 
+ 각각 다른 클래스에서 공통된 기능을 추출하여 새로운 클래스를 만든 후, 새로운 클래스를 상속받도록 하는것이
+ 일반화.
+ ![](./images/2022-01-11-16-07-22.png)
+ 일반화에서 공통된 기능을 추출하여 만든 새로운 클래스는, 직접 사용하려고 만든 클래스가 아니다. 처음부터 사용하려고
+ 만든 super클래스를 가지는 전문화와의 차이점이 이것이다. 공통기능을 관리하기 쉽게 하려고 Super클래스를 만든 것이다.
+ 
+
+## 추상 클래스
+- 공통기능을 관리하려고 만든 클래스는 직접 사용하지 못하도록 만드는 것이 추상 클래스이다.
+abstract class 클래스명 형식으로 사용된다. 추상클래스로 지정되면 인스턴스를 생성할 수 없다.
+![](./images/2022-01-11-16-47-00.png)
+
+
+## 추상 메서드(OOP.ex05.n)
+- 추상 메서드는 서브클래스의 역할에 맞춰서 구현해야 하는 메서드인 경우에 사용한다.
+- 메서드 시그니쳐(메서드명, 리턴타입, 파라미터)만 작성한다.
+- 추상 메서드는 서브 클래스에게 구현을 강요하는 문법이다.
+- 추상 메서드는 메서드의 몸체를 만들지 않기 때문에(method() {몸체}) 일반 클래스에는 추상 메서드를 둘 수 없다.
+- 오직 추상 클래스(또는 인터페이스)만이 추상 메서드를 가질 수 있다.
+abstract void 메서드명()
