--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -2561,7 +2561,7 @@ class 자식클래스명 extends 부모클래스명 {
   - 메서드 재정의 시에는 메서드 시그니쳐(형식) 즉, 메서드의 파라미터, 이름, 리턴타입이 일치해야 한다.
   **주의**
   - 오버로딩(Overloading)은 기존 클래스에 없던 메서드를 정의.
-  - 오버라이딩(Overiding)은 상속받은 메서드의 내용만 변경하는것.
+  - 오버라이딩(Overiding)은 상속받은 메서드의 내용을 기능에 맞게 재정의 하는것.
 - ex) A,B,C 클래스가 있다
   B클래스는 A클래스를 상속, C클래스는 B클래스를 상속.
   -> B클래스는 A클래스의 자원 사용가능. C클래스는 A와B의 자원 모두 사용가능.
