--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -2541,7 +2541,7 @@ run()
 - 상속을 받는 클래스를 하위 클래스(서브 클래스), 상속을 해주는 클래스를 부모 클래스(수퍼 클래스) 라고 한다.
 - 상속의 범위는 부모클래스의 필드(변수)와 메서드이다.
 - private로 설정된 필드, 메서드는 상속 불가하다.
-- super클래스는 sub클래스의 자원을 사용할 수 없다.
+- super클래스는 sub클래스에서 정의한 자원을 사용할 수 없다.
 - sub클래스는 super클래스의 자원을 사용할 수 있다.
 ```java
 class 자식클래스명 extends 부모클래스명 {
@@ -2620,3 +2620,115 @@ abstract class 클래스명 형식으로 사용된다. 추상클래스로 지정
 - 추상 메서드는 메서드의 몸체를 만들지 않기 때문에(method() {몸체}) 일반 클래스에는 추상 메서드를 둘 수 없다.
 - 오직 추상 클래스(또는 인터페이스)만이 추상 메서드를 가질 수 있다.
 abstract void 메서드명()
+
+# 2022년 01월 12일
+
+## 다형성(Polymorhpism) - OOP.ex06.a~e
+- 상위 클래스의 레퍼런스는 하위 클래스의 인스턴스 주소를 담을 수 있다.
+- 상위 클래스의 레퍼런스는 하위 클래스의 인스턴스를 가리킬 수 있다.
+- 상위 클래스의 레퍼런스는 하위 클래스의 객체를 가리킬 수 있다.
+- 하위 클래스의 레퍼런스는 상위 클래스의 객체 주소를 담을 수 없다.
+```java
+class Vehicle(){
+  int c1; 
+  c1 = new Vehicle();
+  c1 = new Bike(); 
+  c1.engine = true; // 하위 클래스 Bike의 인스턴스 engine을 가리킬 수 있다.
+}
+class Bike extends Vehicle(){
+  boolean engine;
+}
+class Car extends Vehicle(){
+  int c1;
+  c1 = new Vehicle() // 상위 클래스의 인스턴스 주소 Vehicle을 가리켰기 때문에 오류발생
+  int cc;
+  int valve;
+}
+-> 상위 클래스 Vehicle의 레퍼런스 c1은 하위 클래스 Bike의 인스턴스를 가리킬 수 있다.
+-> 하지만 하위 클래스 Car의 레퍼런스 c1은 상위클래스 Vehicle의 인스턴스를 가리킬 수 없다.
+```
+- 레퍼런스의 형변환 : 상위 레퍼런스(c)로 하위클래스의 레퍼런스 (new Sedan)를 가리킬 때
+  - Car에 model, valve, cc변수가 있다.
+  - Car를 상속받는 Sedan에는 sunroof, auto 변수가있다.
+  ```java
+  Car c = new Sedan();
+  c.model = "소나타";
+  c.valve = 16;
+  c.cc = 2000;
+  -> Car 클래스에 있는 model, valve, cc는 사용가능
+  하지만 
+  c.sunroof = true;
+  c.auto = true;
+  -> 에러 발생. Car에는 sunroof, auto 변수가 없기  때문이다.
+  Sedan s = (Sedan) c; // 형변환을통해 Sedan에 c의 레퍼런스 주소를 담는다.
+  s.sunroof = true;
+  s.auto = true; // 사용 가능
+  ```
+  ```java
+  class A{
+    Sedan obj;
+  }
+  void m(){
+    Sedan obj; // Sedan의 서브 클래스의 모든 변수를 obj에 담을 수 있다.
+  }
+  ```
+ ```java
+  Vehicle v = new Vehicle();
+    Bike b = new Bike();
+    Car c = new Car();
+    Sedan s = new Sedan();
+    Truck t = new Truck();
+    
+    Bike b2 = null;
+    b2 = c; 
+    -> 컴파일 에러 발생
+    Bike, Car 모두 Vehicle의 서브 클래스이지만 Car 클래스는 Bike 클래스에만 정의된 클래스 멤버(인스턴스 변수, 메서드)
+    를 가지고 있지 않기 때문이다.
+ ```
+ ### 다형성 - 오버로딩(OOP.ex06.b)
+ ```java
+ class A(){
+ m()
+ m(int x)
+ m(String s,int x)
+ m(int, String)
+ } -> 
+ 오버로딩은 파라미터의 개수나 타입이 다르더라도 같은 일을 하는 메서드에 대해 
+ 같은 이름을 부여함으로써 프로그래밍의 일관성을 제공.
+ argument의 타입과 순서, 개수로 사용하고자 하는 메서드를 호출한다.
+ A.m()
+ A.m(100)
+ A.m("홍길동")
+ A.m("홍길동",20)
+ A.m(20, "홍길동")
+ 변수 이름만 바꿔서 중복 메서드 만들 수 없다.
+ m(int a) -> 에러
+ m(String r, int a) -> 에러
+ 리턴 타입만 바꿔서 중복 메서드 만들 수 없다.
+ ```
+ - 한 클래스에서 같은 이름으로 여러 메서드를 만드는 것이 오버로딩이다.
+ - Super 클래스에 있는 메서드와 같은 이름으로 Sub 클래스에서 파라미터 타입, 개수가 다른 메서드를 추가 하는 것 또한 오버로딩이다.(파라미터의 이름만 다른 것은 안됨.)
+ ```java
+ class A(){
+   static void m(){
+
+   }
+   static int m(){
+     return 0;
+   } // 에러 -> 리턴 타입만 다르게 해서 중복된 메서드를 만들 수 없다. 
+ }
+ ```
+- 오버라이딩(overriding) 
+  - 상속 받은 메서드를 서브 클래스의 역할에 맞춰 재정의 하는 것.
+  - 오버라이딩한 메서드는 Super 클래스의 메서드와 파라미터 시그니쳐(메서드명, 파라미터 타입,개수,순서)가 같아야 한다.
+  - 파라미터 시그니쳐를 일치시킨 후 필요한 기능에 맞춰서 파라미터를 추가할 수 있다.
+  - 오버로딩, 오버라이딩을 헷갈리지 않도록 @Overriding 에노테이션을 추가하여 검사한다.
+  - private로 설정된 메서드는 오버라이딩 자체가 불가능하다.
+  
+  - 추상 클래스의 추상메서드 오버라이딩 그리고 레퍼런스
+![](./images/2022-01-12-17-33-27.png)
+
+- final 사용법
+  - 클래스에 final을 붙이면 서브 클래스를 생성할 수 없다.
+  - 메서드에 final을 붙이면 서브 클래스에서 오버라이딩 할 수 없다.
+  
