상속, 데코레이터

--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -2732,3 +2732,42 @@ class Car extends Vehicle(){
   - 클래스에 final을 붙이면 서브 클래스를 생성할 수 없다.
   - 메서드에 final을 붙이면 서브 클래스에서 오버라이딩 할 수 없다.
   
+  ## 2022년 01월 13일
+
+  ## 기능 확장을 위한 다양한 기법
+  - 기존 클래스에 코드 추가(test1)
+    - 기존 클래스를 이용하고 있는 App에 영향끼침
+    - 기존 코드를 손대면 오류 발생 위험 증가.
+
+  - 기존 클래스 복제 한 후 코드 추가
+    - App 마다 중복코드 생성. -> 중복코드에 변경사항 발생 시 모두 바꿔줘야 하는 번거로움이 있다.
+
+  - 기존 클래스를 상속 받은 후에 코드 추가.
+    - 기존 코드의 소스 파일이 없어도 된다.(수퍼 클래스의 코드를 사용할 권한을 얻었기 때문)
+    - 기존 코드를 손대지 않는다. -> 기존 코드에 오류 발생시키지 않음.
+
+  - 의존 객체(dependency object) 주입(injection)받기
+    - 의존 객체는 작업할 때 사용하는 객체, 주입은 사용할 객체를 설정하는 것
+    - 상속에 비해 유지보수가 유연하다. 필요한 객체만 포함할 수 있기 때문
+    - 의존 객체 주입을 자동화 - Dependency Injection(DI)
+    - 의존 객체 주입 자동화를 도와주는 도구  - DI Container = IOC Container
+    - IOC Container를 포함하는 Spring IOC Container. 
+    - Spring IOC Container를 포함하는 Spring boot
+
+- 기능 확장 실습 1 - 기존 코드에 새 기능 추가 : oop.ex05.x2
+ ![](./images/2022-01-13-11-41-20.png)
+   -> 
+    - App을 만들 때 마다 Engine 클래스에 기능을 추가(기존 코드를 변경하다 보면 버그가 추가될 가능성이 높아진다.)
+    - 한 클래스가 많은 역할을 수행하게 됨.
+    - 트럭 기능만 필요한 App을 만드는 입장에서는 불필요한 기능까지 가졍가야 한다.
+    - 유지보수가 번거로워 진다.
+- 기능 확장 실습 2 - 복제한 코드에 새 기능추가 : oop.ex05.x3
+
+- 기능 확장 실습 3 - 상속 문법을 활용 : oop.ex05.x4
+  - 상속을 통한 기능 확장의 한계
+  - 만약 요구 사항이 : 전기 트럭을 만들라! 트럭 기능이 있는 트레일러를 만들어라! -> 추가 기능에 따라 수많은 서브 클래스들을 생성해야함.
+- 기능 확징 실습 4 - 데코레이터 설계기법
+  - 데코레이터는 주 객체에 붙이는 선택기능이다.
+  - new 옵션1(주객체)
+  - ((new 옵션2) new 옵션1(주객체))
+  - new 옵션3(new 옵션2( new 옵션1(주객체)))
