--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -2771,3 +2771,28 @@ class Car extends Vehicle(){
   - new 옵션1(주객체)
   - ((new 옵션2) new 옵션1(주객체))
   - new 옵션3(new 옵션2( new 옵션1(주객체)))
+
+  # 2022년 01월14일 
+
+  - 추상 클래스와 구현
+    - 추상 클래스는 서브 클래스에게 공통기능을 상속해주는 것이 목적이다
+    - 인스턴스를 생성할 수 없다.
+    - 추상 클래스는 서브 클래스에서 서브 클래스에서 필요한 기능에 맞게 구현 된다.
+    - 자식 클래스 객체의 인스턴스 주소를 담을 수(가리킬 수) 있다 -> car = new Sedan();
+   
+![](./images/2022-01-14-11-24-45.png)
+![](./images/2022-01-14-11-47-40.png)
+
+- 클래스 관계
+  - 연관(Association)(지속적 사용)
+  - 의존(Dependancy)(특정 작업에서만 일시적으로 사용)
+  - 집합(Aggregation)(포함관계)
+  - 복합(Composition)(강한연결)
+    -> 모두 의존 객체이다. 코드로는 구분할 수 없다. 개념적으로 구분
+
+- I/O streams - java.io.* , java.nio.*
+![](./images/2022-01-14-15-22-27.png)
+
+## OS의 파일 시스템 (파일과 디렉토리의 위치정보(HDD, CD-ROM, USB 메모리 등 저장장치)를 관리하는 시스템)다루기 - File 클래스 : io.ex01~
+- 현재 디렉토리는 '.'으로 조회한다
+- 이클립스에서는 '.'은 현재 프로젝트를 조회한다.
