파일인풋스트림

--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -2796,3 +2796,49 @@ class Car extends Vehicle(){
 ## OS의 파일 시스템 (파일과 디렉토리의 위치정보(HDD, CD-ROM, USB 메모리 등 저장장치)를 관리하는 시스템)다루기 - File 클래스 : io.ex01~
 - 현재 디렉토리는 '.'으로 조회한다
 - 이클립스에서는 '.'은 현재 프로젝트를 조회한다.
+
+
+## 2022년 01월17일(io ex01-Exam0210~)
+- 특정 클래스에 수퍼 클래스를 따로 지정하지 않으면 기본적으로 Object가 수퍼 클래스로 지정된다.
+- 수퍼 클래스를 상속 받아 특정 기능을 하는 클래스를 만드는 것을 Specialization
+- 특정 클래스들의 공통된 기능을  뽑아 수퍼 클래스를 만드는 것을 Generalization
+- 데코레이터 설계
+  - 클래스에 특정 기능을 필요에 따라 탈,부착 하는 설계기법.
+
+## File 클래스
+- 파일이나 디렉토리 정보를 관리.
+- 디렉토리 생성
+```java
+ File dir = new File("temp2/a"); // 디렉토리를 만들고자 하는 위치경로 지정
+ if (dir.mkdir()) { // 디렉토리 생성
+ }
+만약 존재하지 않는 파일에 하위 파일까지 생성하고 싶을 때는
+mkdirs 명령을 실행한다.
+if (dir.mkdirs(){
+}
+```
+- 파일 생성
+  ```java
+  File file = new file("파일 생성하고자하는 경로")
+  
+  if (file.createNewFile()){
+
+  }
+  ```
+- 파일 객체와 파일명 필터의 작업 과정
+![](./images/2022-01-17-10-52-40.png)
+- 파일 객체와 필터의 관계(io - ex01 : Exam0610)
+![](./images/2022-01-17-11-00-50.png)
+- 필터일을 하는 클래스를 만들 때 개발자마다 사용법(메서드를 호출하는 방법)이 다르다면
+필터 사용법이 일관성이 없기 때문에 프로그래밍이 어려워진다.
+- 인터페이스
+  - 메서드를 만드는 사람에 상관없이 동일한 시그니처(메서드명, 파라미터, 리턴타입)를 갖는 메서드를 정의한다.
+  - 그래서 그 메서드를 사용하는 개발자가 일관된 방식으로 사용할 수 있어서 프로그래밍이 용이해짐.(객체의 교체가 용이해짐)
+  - 해당 클래스를 받는 개발자에 상관없이 일관된 방법으로 사용할 수 있다.
+  -> 메서드 규칙을 정의하는 이유!
+- 파일 필터와 인터페이스의 관계
+  ![](./images/2022-01-17-11-21-41.png)
+- FilenameFilter 인터페이스
+  630~660번 넘어가기
+
+- 
