--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -2858,9 +2858,63 @@ if (dir.mkdirs(){
 - DBMS(Database Management System)와 SQL(DBMS에 상관없이 표준적으로 사용할 수 있는 명령어)
 - Client에서 Oracle DBMS, MS-SQL DBMS, MySQL DBMS등 DBMS종류에 상관없이 사용할수 있는 명령어를 SQL이라고 한다.
 
-- 스프링 부터 컨테이너
+- 스프링 부트 컨테이너
 
-- AWS 서버구축
+- AWS 서버구축(서버연동동영상 5~7 참고)
   -  AWS EC2 서버를 사용하는 사용자가 자물쇠(public key), 열쇠(private key)를 가지고 있다.
   -  사용자의 자물쇠를 EC2서버에 준다. EC2서버는 데이터를 사용자에게 보낼 때 사용자의 자물쇠로 잠궈서(public key) 보낸다. 
   -  사용자는 받은 데이터를 열쇠(private key)로 열어서 사용한다.
+
+- 실행권한부여
+  - r(read)w(write)x(excute-실행)(사용자 자신) rwx(사용자와 같은 그룹) rwx(기타)
+
+- DBMS마다 명령문법이 다르다면 사용하기 매우 불편할 것이다.
+  - 그래서 표준 명령 문법을 정함 -> Structured Query Lanaguage(SQL)
+
+- 데이터베이스(database) = 스키마(shcema)
+- 테이블
+  - 테이블 생성
+   - create table studydb.test01 (
+      name varchar(50) not null, // not null은 필수 입력 항목(null이 되면 안됨)
+    )
+    
+  - 테이블 사용 
+    
+    -  use studydb;
+    -> 한 번 사용할 db명을 등록하면 테이블을 다시 만들 때 
+    db명을 입력하지 않아도 된다
+    -> create table test01
+  
+  - 데이터 입력
+    - insert into 테이블명(입력할 데이터) values(데이터의 값)
+    - 테이블을 만들 때 사용할 컬럼을 not null로 설정하면 필수입력 항목이되어 입력하지 않을 시 에러 발생.
+    - 입력값을 생략하면 해당 컬럼에 지정된 기본값이 대신 입력된다.
+      - create int not null,
+      - name varchar(20) default 'noname',
+   
+  - 테이블에 입력된 데이터 타입 출력
+    - desc(describe의 약자) 테이블명
+  - 테이블에 입력된 실제 데이터 출력
+    - select *(테이블의 모든 정보를 뜻함) from 테이블명
+
+  - mariadb 컬럼의 데이터 타입(DBMS마다 타입이 제각각이기 때문에 document참고할 것)
+    - int 
+      - tinyint, smallint, mediumint, bigint
+    - float
+      - 부동소수점 저장
+    - numeric = decimal
+      - 전체 자릿수와 소수점 이하의 자릿수를 정밀하게 지정 가능.
+      - numeric(6,2) -> 전체 6자리중 소수점이하는 2자리(즉, 정수는 4자리). 소수점 2자리를 초과하는 수는 버리거나, 반올림
+      - 범위를 설정하지않고 numeric만 설정할 시 기본 10자리
+      - numeric은 소수점이 없다. 
+      - numeric에 12345678.92란 숫자를 입력하면 0.92를 반올림해 12345679가 출력된다.
+  
+- 뷰
+- 트리거(trigger = listener)
+  - 특정 조건에서 자동으로 호출되는 함수
+  - 특정 조건은 SQL 실행 전/후 등을 의미한다.
+- 함수(function)
+- 인덱스(index)
+
+## 프로젝트 목적
+- 관리시스템 개발 : 데이터 등록, 삭제, 변경 등을 할 수 있는가?
