--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -2918,3 +2918,111 @@ if (dir.mkdirs(){
 
 ## 프로젝트 목적
 - 관리시스템 개발 : 데이터 등록, 삭제, 변경 등을 할 수 있는가?
+
+# 2022년 02월 21일
+- A,B 라는서로 다른 사람이 작업을 할 때 각각의 컴퓨터에 자료를 두고 공유하는 것이 아니라, 한 컴퓨터에 두고 자료를 공유
+- A,B 두 사람이 동시에 파일을 수정, 삭제 등 작업을 할 때 문제가 발생.
+- 데이터 관리 시스템(사용자 인증, 사용자 권한 관리,  동기화 관리 등)을 만들어서 각 사용자의 권한에 따라 파일을 작업할 수 있도록 함.
+- -> 데이터 관리를 학문적으로 체계화(일관된 방식으로 프로그램 개발 가능)
+- 공학 : 기술적 경험을 학문적으로 체계화 시키는 것.
+- DBMS : Database Management System
+- 데이터베이스 : 여러 사람이 공유하고 사용할 목적으로 통합 관리되는 정보의 집합.
+
+## mariadb 
+- 실행 : mysql -u 유저명 -p
+- sql문 작성하면 dbms클라이언트는 이 명령문을 dbms에 넘겨줘서 그 결과가 dbms client에 출력된다. 
+- DDL(Data Definition Language) : 데이터 구조 정의, 함수/프로시저/리스너
+- DML(Data Manipulation Language) : insert, update, delete
+- DQL(Data Query Language) : select(데이터를 조회)
+- 테이블 생성
+create table 테이블명(
+  컬럼명 타입 옵션,
+);
+- show databases; : 유저가 사용할 수 있는 데이터베이스목록 출력.
+- show tables; : 현재 생성된 테이블 목록 출력.
+- drop table 테이블명 : 테이블 삭제
+- where 컬럼명='데이터'; :  특정 데이터가 입력된 컬럼 찾기
+**특정 DBMS에서는 컬럼의 데이터값 비교할 때 공백까지 비교하는 경우가 있다.**
+
+- char(n)
+  - 최대 n개의 문자를 저장
+  - -> 0 <= n  <= 255
+  - 한 문자만 저장하더라도 지정한 n자만큼의 메모리를 사용한다.
+  - 메모리 크기가 고정되어서 낭비가 발생하지만, 검색 속도가 빠르다.
+- varchar(n)
+  - 최대 n개의 문자를 저장.
+  - 0~65535 바이트 크기를 갖는다.
+  - n값은 문자집합에 따라 최대값이 다르다.
+  - 한 문자에 1바이트를 사용하는 ISO-8859-n 문자 집합인 경우 최대 65535이다.
+  - 하지만 UTF-8로 지정된 경우, n의 최대값은 21844이다.
+  - 메모리 크기가 가변적이라서 데이터 낭비가 없지만, 검색 속도가 느리다.
+- datetime
+  - 날짜 정보를 저장
+  - 년, 월, 일 정보를 저장
+  - date는 년,월,일
+  - time 시,분,초 
+  - datetime으로 설정된 컬럼에 날짜 정보만 주면 시,분,초 모두 0으로 설정된다.
+  - datetime으로 설정된 컬럼은 날짜 정보는 필수입력 사항이다.
+- boolean
+  - ture,false를 의미하는 값을 저장할 때 정수 1또는 0으로 포함한다.
+  - 실제 컬럼을 생성할 때 tinyint(1byte)크기로 설정한다.
+  - boolean타입으로 설정된 컬럼은 Y,N는 입력할 수 없다. true,false 또는 문자열 '0', '1'은 허용되며 0,1로 입력된다.
+  
+
+- 바이너리 데이터를 텍스트로 변환할 때
+  - base64 : 바이너리 데이터를 텍스트로 변환할 때 사용하는 인코딩 알고리즘
+![](./images/2022-02-21-12-14-14.png)
+
+- 키 컬럼 지정
+  - 데이터를 구분할 때 사용하는 값
+  
+  - 테이블
+    - name, email, jumin, id, pwd, tel, postno, basic_addr, gender
+  
+  - key
+    - 데이터를 구분할 때 사용하는 컬럼들의 집합.
+    - ex) 
+      - {email}, {jumin}, {id},{name,tel}, {tel, basic_addr, gender, name}
+  
+  - candidate key(후보키 = 최소키)
+    - 최소 항목으로 줄인 key
+  
+  - primary key(주 키)
+    - candidate key 중에서 DBMS 관리자가 사용하기로 결정한 키
+    - primary key(pk)를 지정하지 않으면 데이터가 중복될 수 있다.
+    - 데이터 타입 primary key 명령어를 통해 pk로 지정.
+    - primary key로 지정되면 기본적으로 not null로 설정된다.
+    - 여러개의 primary key로 지정하기 위해서는 
+     constraint 제약조건명 primary key(컬럼명, 컬럼명...) 의 형식으로 지정해야 한다.
+  
+  - alternate key(대안 키)
+    - candidate key 중에서 primary key를 제외한 나머지 키.
+    constraint 제약조건명 unique (컬럼명, 컬럼명..)의 형식으로 지정.
+  
+  - artificial key(인공 키)
+    - primary key로 사용할 키를 찾을 수 없을 때 사용하는 키
+    - 인공키는 일반적으로 정수값을 사용한다.(회원 일련번호 등)
+
+  - index
+    - 특정 컬럼의 값을 오름차순, 내림차순으로 정렬시키는 문법.
+    - index를 지정하면 조회 속도가 증가한다.
+    - 하지만 입력,변경,삭제 시에는 속도가 감소한다.
+    fulltext index 제약조건명(컬럼명);
+  
+  - 컬럼 추가
+    alter table 테이블명
+    add coulumn 컬럼명 타입;
+  
+  - 컬럼에 옵션 추가
+    alter table 컬럼명
+    modifty column 컬럼명 타입 옵션
+
+  - 컬럼 값 자동 증가
+    - 숫자 타입의 pk 컬럼인 경우 값을 1씩 자동 증가시킬 수 있다.
+    - 
+    - 즉 데이터를 입력할 때 해당컬럼의 값을 입력하지 않아도 자동으로 증가.
+    - 단 삭제되었을 때 비어있는 번호는 다시 채우지 않는다.
+    alter table 테이블명
+    modify column 컬럼명 타입 auto_increment;
+  - auto_increment;로 설정한 컬럼의 값을 직접 설정할 수도 있다.
+  - 중간에 있는 값을 건너뛰고 컬럼값을 입력하면 입력한 시점의 값으로부터 자동 증가한다.
