--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -2841,7 +2841,19 @@ if (dir.mkdirs(){
 - FilenameFilter 인터페이스
   630~660번 넘어가기
 
-# 2022년  02월18일
+# 2022년 02월 16일
+## 미니프로젝트2(성적관리 시스템)
+- 1단계 : standalone
+  - 입력, 조회, 변경, 삭제(CRUD)기능을 하는 APP을 각각 다른 파일로 작업하게 되면 APP끼리 데이터 공유가 불편하다.
+  - 데이터 동기화가 어렵다(실시간 동기화가 어렵다)
+- 2단계 : 데이터 처리 기능을 분리
+  - 실시간 데이터 공유
+  - DBMS(Database Management System)을 통해 데이터 실시간 공유
+  
+- build.gradle 파일 내에서 명령어 설정
+  - 이 설정영역 내에서 사용되는 프로그래밍 언어
+  - Domain-Specific Language(DSL) : groovy, kotlin
+# 2022년  02월 18일
 ## DBMS
 - 데이터 관리(데이터를 파일에 I/O)
 - DBMS는 Client와 Server가 통신을 할 때 전용 프로토콜을 이용하기 때문에 각각의 DBMS종류에 따라 전용 프로토콜을 이용해야 한다.(표준 프로토콜이 없기 때문)
@@ -3026,3 +3038,93 @@ create table 테이블명(
     modify column 컬럼명 타입 auto_increment;
   - auto_increment;로 설정한 컬럼의 값을 직접 설정할 수도 있다.
   - 중간에 있는 값을 건너뛰고 컬럼값을 입력하면 입력한 시점의 값으로부터 자동 증가한다.
+
+# 2022년 02월 22일(sql exam01)
+## 뷰
+- 조회 결과를 테이블처럼 사용하는 문법
+
+- select table_name, column_name, constraint_name from key_column_usage;
+
+- 제약 조건(primary key 등) 이 어떤 테이블에 속해있고, 어떤 컬럼명을 사용하는지 조회하는 문법
+
+- 뷰는 select를 실행했을 때 별도의 테이블을 생성한 것이 아니다. select를 실행할 때마다 요청한 데이터를 가상의 테이블로 만들어서 보여주는 것이다.
+ex) create view worker
+  as select no, name, class from test1 where working = 'Y';
+  위의 문장이 select * from worker; 명령을 실행할 때마다 자동적으로 실행되는 것.
+
+- 자신이 조회하고 싶은 정보만 따로 가상의 테이블로 지정해놓는 기능.
+
+- test1 이라는 테이블에는 no, name, class, working, tel 컬럼이 있지만 view로 지정한 worker라는 가상 테이블에는 내가 조회하고싶은 no, name, class의 정보만 입력되어있다.
+
+- 따라서 worker테이블엥서는 no, name, class의 정보만 조회할 수 있다.
+  
+- not null로 설정된 컬럼을 auto_increment를 통해 자동증가로 설정하면 null로 입력하더라도 자동으로 증가된다.
+
+- 값 입력시 컬럼을 지정하지 않으면 컬럼을 생성한 순서대로 값을 입력해야 한다.
+
+- 값 입력시 컬럼의 순서를 테이블 생성할 때 지정한 순서와 다르게 지정할 수 있다.
+
+- 하지만 입력시에 지정한 컬럼의 순서대로 컬럼 값을 입력해야 한다.
+
+## DML(Data Manipulation Language)
+- 데이터 등록, 변경, 삭제를 다루는 SQL 문법
+
+- insert
+  - 데이터를 입력할 때 사용하는 문법.
+  
+- 여러 개의 값을 한번에 입력하기
+insert into test1(name,tel) values
+('aaa','1111'),
+('bbb','2222'),
+('ccc','3333')
+
+- update 
+  - 등록된 데이터를 변경할 때 사용하는 명령
+  update 테이블명 set 변경할 컬럼명=값, 컬럼명=값, ... where 바꾸고자 하는 컬럼의 값;
+
+- delete
+  - 등록된 데이터를 삭제할 때 사용하는 명령
+  delete from 테이블명 where 조건;
+
+- autocommit
+  - mysql의 autocommit의 기본값은 true이다.
+  
+  - autocommit이 false로 설정된 경우, mysql 클라이언트가 쓰레드에 요청을 하면 쓰레드가 mariadb server에 요청을하고 mariadb server는 파일에서 정보를 가져와서 쓰레드 임시 데이터베이스에 임시보관을한다. 그후 클라이언트가 select를 하게되면 임시데이터베이스에 보관된 결과 + 실제 테이블에 보관된 결과를 클라이언트에게 리턴한다.
+![](./images/2022-02-22-11-21-36.png)
+  
+  - commit을 하게되면 쓰레드의 임시데이터베이스에 보관된 결과가 실제 파일에 저장되게 된다.
+
+  - rollback
+  - 최종 commit 전의 단계로 되돌린다.
+
+## DQL(Data Query Language)
+- select
+  - 데이터를 조회할 때 사용
+  
+  - 모든 데이터 조회
+  select * from 테이블명
+  
+  - 특정 데이터 조회(projection)
+  select 
+  컬럼명
+  컬럼명
+  컬럼명
+  from 테이블명
+
+  - 가상의 컬럼 값 조회
+  select no, concat(name,'(',class,')') from test1;
+  https://mariadb.com/kb/en/concat/ 참고
+
+  - 특정 컬럼 조회(selection)
+  select * from 테이블명 조건
+  ## selection, projection 차이 공부하기
+
+  - null 여부인지 가릴 때는 is, is not 연산자를 사용.
+
+- like
+  - 문자열을 비교할 때 사용
+  select * from test1 where class like '%java%'
+  ![](./images/2022-02-22-14-07-47.png)
+
+  ## KF(Foreign Key) - 부모테이블 + 자식테이블
+  
