--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -3126,5 +3126,120 @@ insert into test1(name,tel) values
   select * from test1 where class like '%java%'
   ![](./images/2022-02-22-14-07-47.png)
 
-  ## KF(Foreign Key) - 부모테이블 + 자식테이블
   
+  # 2022년 02월 23일(sql Exam04)
+  
+  ## FK(Foreign Key) - 부모테이블 + 자식테이블 : 다른테이블의 프라이머리, 유니크키
+  - Foreign Key는 원래 한 테이블에 들어가야 할 컬럼을 데이터 중복을 피하기 위해 여러 테이블로 나누기 위해 사용한다.
+  ![](./images/2022-02-23-09-54-33.png)
+
+  - ER-Diagram 
+  - Entity-Relationship(=table)
+
+- surrogate key(대리 키) = artificial key(인공 키)
+  
+- 첨부파일 고유번호 fno, 게시글번호 bno, 파일시스템에 저장된 첨부파일의 경로 filepath
+  
+- FK 제약 조건이 없을 때 첨부파일이 있는 게시글을 삭제하더라도 첨부파일은 그대로 남아있어 메모리 낭비가 발생하게 된다.
+- 다른 테이블의 데이터를 참조하는지 검사하지 않았기 때문에 이런 문제가 발생한다.
+- 따라서 다른 테이블의 데이터를 참조하는 경우 해당 데이터가 존재하는지의 여부를 검사하도록 한다.
+- 이것을 가능하게 하는 문법이 외부키(Foreign key)이다.
+- FK 제약조건을 설정하면 참조하는 데이터가 있는 컬럼의 경우 삭제 할 수 없게된다.
+
+# 2022년 02월 24일
+
+- primary key는 중복될 수 없다.
+- primary key를 참조하는 foregin key가 있는 쪽이 자식.
+- primary key가 있는 쪽이 부모.
+![](./images/2022-02-24-09-59-18.png)
+- 부모, 자식 관계는 1대 다의관계이다.
+
+## 이클립스에 http://exerd.com/update/exerd/3.x/ 설치함
+
+## eomcs-docs/db/modeling
+- 모델링 : 시스템을 분석하고 구조화해서 글과 그림으로 표현(추상화).
+- DB 모델링 : 데이터를 분석하고 구조화해서 데이터 속성과 관계를 글과 그림으로 표현(추상화)
+  - 데이터가 중복되지 않도록 테이블을 구조화 하는 것. 
+- 주요 용어
+  - table( = relation, entitiy, file)
+  - intension( = schema, header) : 데이터 구조 설계도
+  - extension( = instance, data) : epdlxj
+  - row( = tuple, record) : 데이터(여러 컬럼ㄹ으로 이루어진) 한 개.
+  - coulmn( = attribute, field) : 데이터의 한 항목
+
+  - key : 데이터를 구분할 때 사용할 식별자.
+    - 수퍼 키라고 부른다.
+  - candidate key(후보 키) : 수퍼키들 중에서 선별된 최소키를 가리킨다.
+    - 최소한의 컬럼 값 만으로 식별이 가능한 키
+
+- SQL 문법으로는 포함관계와, 배타적 관계를 제어할 수 없다.(프로그래밍에서 제어해야 한다.)
+![](./images/2022-02-24-12-02-00.png)
+
+- 관계 테이블 식별
+  
+  - 테이블과 테이블 간의 관계를 식별하여 별도의 테이블로 정의한다.
+    - 이런 테이블을 "관계 테이블" 이라 부른다.
+    - 두 테이블의 관계 정보를 저장한다.
+  
+  - 두 테이블과 관계 테이블 사이를 부모-자식 관계로 만든다.
+    - 다른 테이블의 데이터를 참조하는 테이블이 자식 테이블이다.
+    ex) 한 강의실에 여러가지 강의가 배정될 수 있다. - 1대 다의 관계 ( 1이 부모(강의실), 다가 자식(강의))
+    ![](./images/2022-02-24-12-41-14.png)
+  
+  
+  - 일반 관계
+    - 두 테이블 사이의 관계 식별하여 연결한다.
+    - 부모 - 자식 관계로 정의한다.
+      - 데이터를 참조하는 쪽이 자식 테이블
+      - 데이터를 제공하는 쪽이 부모 테이블
+  
+  - 다 대 다 관계의 해소
+    - 테이블과 테이블 사이에 다 대 다 관계를 형성한다면, 일 대 다의 관계로 변경해야 한다.
+
+- 제1 정규화
+  - 데이터 중복을 찾아내어 별도의 테이블로 데이터를 분리시키는 것.
+  - 자식 테이블에서는 부모 테이블의 데이터를 가리키기 위해 그 데이터의 pk값을 보관해야 한다.
+
+- 논리 모델과 물리모델
+  - 물리모델 : 특정 DBMS에 맞춘 물리적인 모델링
+
+# 2022년 02월 25일
+- exerd 도메인 설정
+  - 도메인으로 설정하면 도메인에 설정한 데이터 타입의 값이 자동으로 적용된다.
+
+## 오늘은 11번까지 논리모델까지 해보기
+
+# 2022년 02월 28일(sql ex05)
+
+## select
+- 모든데이터 가져오기
+select all 컬럼명 from 테이블명;
+-> all은 생략 가능
+
+- 중복 데이터 제외
+select distinct loc from 테이블명; 
+
+- 출력 라벨명 변경
+select 컬럼명 as 변경할 컬럼명 from 테이블명;
+-> select rno as room_no, loc as location from room;
+  - as는 생략가능하다.
+
+- 결과 합치기 
+  -  select distinct(중복제외) 컬럼명 from 테이블명 union seelct distinct 컬럼명 from 테이블명
+  -  각 테이블에서 사용되는 컬럼을 중복된 결과 없이 합쳐서 출력하고 싶을 때 사용.
+
+- 차집합
+   select distinct bank from stnt where not bank in (select distinct bank from tcher);
+-> tcher 테이블에 없는 bank컬럼만 출력해라
+
+- join 
+  - cross join(cartesian join)
+    - 두 테이블의 데이터를 1:1로 모두 연결한다.
+  
+  - inner join
+    - 두 테이블의 각 기준점을 분류하여 기준점이 일치하는  데이터끼리 연결한다.
+
+  - left outer join
+
+  - right outer join
+  ![](./images/2022-02-28-14-12-53.png)
