--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -3243,3 +3243,22 @@ select 컬럼명 as 변경할 컬럼명 from 테이블명;
 
   - right outer join
   ![](./images/2022-02-28-14-12-53.png)
+
+  - natural join 
+    -  두 테이블의 기준점이 모두 같을 때만 join가능.
+    - natural join이 유효한 경우와 무효한 경우
+      - 부모테이블의 PK컬럼명과 자식테이블의 FK컬럼명이 다를 경우
+
+      - 부모 테이블의 PK 컬럼명과 자식테이블의 다른 컬럼명이 같을 경우
+      ![](./images/2022-02-28-14-47-23.png)
+
+# 2022년 03월 02일
+- join
+
+- 특정 컬럼을 기준으로 그룹으로 묶기
+  - group by 명령어를 통해 그룹으로 데이터를 묶는다.
+  - group by, having을 통해 group 중에서 특정 데이터만 추출한다.
+
+## DB모델링 발표 끝난후 포워드 엔지니어링 이용하여 테이블 생성하여 실제 샘플 데이터 insert할 계획.
+
+## 다음 주에는 git리포 협업 배움.
