--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -3262,3 +3262,102 @@ select 컬럼명 as 변경할 컬럼명 from 테이블명;
 ## DB모델링 발표 끝난후 포워드 엔지니어링 이용하여 테이블 생성하여 실제 샘플 데이터 insert할 계획.
 
 ## 다음 주에는 git리포 협업 배움.
+
+## 2022년 03월 03일
+- 사용자가 App에 데이터를 입력하면 App은 파일에 저장(HDD에)
+- 여러 사용자가 동시에 한 파일을 수정하는 데에 문제점 발생
+  
+- DBMS를 통하여 여러 사용자가 동시에 한 파일을 수정 가능하게 함.
+- 사용자가 DBMS 클라이언트에 SQL 명령어를 입력하면 DBMS 서버에 전달한다
+- 서버는 전달받은 명령을 처리하여 클라이언트에 전달하여 사용자 화면에 출력한다.
+![](./images/2022-03-03-10-28-44.png)
+
+- DBMS 서버에 직접 접근하는 방법
+  - App이 DBMS에 요청을하면 입출력(I/O) 시스템을 통해 파일에서 작업을 수행하고 응답받는다.
+    - 단점은 개발자가 DBMS 전용 프로토콜에 맞춰 통신프로그램을 만들어야 한다.
+    - 복잡하고 번거로운 작업
+    - DBMS 제조사에서 기술유출을 방지하기 위해 프로토콜을 공개하지 않음.
+
+- DBMS 서버에 간접적으로 접근하는 방법
+  - App이 API(클래스, 메서드 등)에 call요청을하여 DBMS에 요청을하여 접근하는 방법.
+    - API는 DBMS에서 제공하고, DBMS와의 통신을 대행하는 역할을 수행한다.
+    - 이 방식은 DBMS 통신 프로토콜을 알 필요가 없고, 통신프로그래밍이 필요 없다.
+
+- SQL과 DB프로그래밍
+  - 사용자는 mysql -u -p와 같은 명령어를 통해 DBMS 클라이언트를 이용.
+
+- Native(DBMS제조사에서 제공하는 API) API = Vender API(Application Programming Interface)
+
+- DBMS마다 API가 달라서 프로그래밍의 일관성이 없다.
+  - API의 규격을 통일(메서드 사용법) -> DMBS 제조사는 ODBC API 규격에 맞춰 클래스와 메서드를 제작
+  - API가 같기 때문에 DBMS마다 따로 프래그래밍 할 필요가 없다
+  - 하지만 실행속도가 느리다는 단점이 있다.
+  - Native API
+
+- DBMS마다 메서드, 리턴타입 등의 사용법이 모두 다르다. Oracle, MS-SQL, MYSQL등의 DBMS종류에 따라 프로그래밍 방법이 달라진다는 의미이다.
+- 이를 해겨하기위해 ODBC(Open DataBase Connectivity)를 이용한다.
+- 여러 DBMS의 일관성있는 사용법을 위해 공통으로 사용할 수 있는 API를 이용하는 방식이다.
+
+# 2022년 03월 16일
+## css 활용
+- border-style
+
+- display 속성 : block, inline, liline-block
+
+  - block
+    - 한 줄을 모두 점유한다.
+    
+  - inline-block
+    - 한 줄을 공유한다.
+
+- Object
+  - 단순 기능 수행
+
+- Component
+  - 복합 기능 수행
+  - 한 개 이상의 객체로 구성됨
+  - 하나의 Object가 하나의 Component가 될 수 있고, 여러개의 Object가 하나의 Component가 될 수 있다.
+  - 즉 한 개 이상의 Object로 이루어진 것이 Component이다. 
+
+- Framework
+
+- UI Component
+  - 한 개 이상의 태그로 이루어진 것.
+
+- float 속성
+  - margin은 따로 설정을 해주지 않으면 서로 다른 영역의 margin끼리 겹침을 허용한다.
+  - 하지만 float을 설정하게 되면 겹침을 허용하지 않아 각각의 margin값이 적용된다.
+  - float속성은 너비, 높이 계산에서 제외된다.
+  - float으로 설정된 태그의 다음태그가 float으로 설정된 태그의 자리를 차지한다.
+  - width, height 값을 지정하지 않으면 inline속성 처럼 콘텐츠의 크기에 따라 폭, 높이가 결정된다.
+
+- absolute 속성(eomcs_web/ css / test 10_5)
+  - 가장 가까운 조상태그가 relative, fixed, absolute속성을 가졌다면 가장 가까운 조상태그를 기준으로 자신의 위치를 조정한다.
+  - 만약 조상중에 relative, fixed, absolute속성이 없다면 현재 페이지의 가장자리 끝을 기준으로 위치를 조정한다.
+
+- clear 속성
+  - clear : left를 선언하게되면 왼쪽에 float으로 지정된 객체가 있으면 자동으로 왼쪽에 아무것도 없는 상태가 되도록 아래로 위치를 이동시킨다.
+  - clear는 float이랑만 사용가능(absolute와는 사용 불가)
+
+- min-height 속성
+  - 높이를 일반 height로 고정하면 height를 초과하는 내용물이 들어가면 지정된 범위를 넘어서 출력되게 된다.
+  - min으로 최소높이를 설정하게되면 넘치지않고 내용물에 맞춰 영역이 조정된다.
+
+- fixed 속성
+  -  특정 위치에 고정되어 스크롤 등을 통해 화면을 움직이더라도 위치가 변하지 않는다.
+
+- 화면 가운데정렬(test10_9)
+  - position을 relative로 설정 후 margin을 위아래 0px, 좌우 auto로 설정
+  - 화면 크기 비율 조정할 때 내용이 비율에 맞춰 가운데 정렬 됨.
+
+- css와 html 코드 분리하기
+  - <link rel= "stylesheet" type = "text/css" href="testx.css">
+- javascript코드 분리하기
+  - <script type = "text/javascript" src="testx.js"></script>
+
+## 부트스트랩 활용하기
+- 외부 CSS/Javascript 라이브러리 적용하는 방법
+  - CDN 방식(Content Delivery Network) : 외부 서버에서 가져오기
+    - CDN방식은 웹브라우저로 다운로드 받은 파일을 서버별로 일정크기만큼 보관해둔다.
+    - 따라서 같은 서버의 라이브러리를 사용한다면 다시 다운로드를 받지 않는다.
+    - 라이브러리 서버가 다운되면 그 서버의 파일에 의존하는 모든 사이트가 화면을 정상적으로 출력할 수 없게 된다.
