--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -3381,3 +3381,56 @@ select 컬럼명 as 변경할 컬럼명 from 테이블명;
 
    - 스프링부트
   
+# 03월 21일
+## 트랜잭션이 필요한 이유와 다루는 방법
+- 연락처 입력
+  - 연락처 기본 정보를 입력할 때 전화 번호의 값을 20자리 넘어가게 입력한다.
+  - 입력을 수행한 후 테이블에서 전화번호 입력 상태를 확인한다.
+  - 전화번호 입력 값이 컬럼의 크기를 넘어서는 경우 오류 발생
+    - 그러나 그 전에 수행했던 입력 작업은 실제 테이블에 반영되어 있다.
+  - 만약 오류가 발생하지 않을 경우에만 입력을 완료하고 싶다면 입력작업들을 한 단위로 묶어라!.
+  - 
+
+- 트랜잭션 적용 전
+  - 입력값
+    - 전화 : 16자리
+    - 전화 : 23자리
+    - 전화 : 13자리
+    - 이메일 : hong@test.com
+    - 회사 : 비트캠프
+   -> 이름, 이메일, 회사는 정상적으로 ml_contact에 입력됨.
+   -> ml_contact_tel에 16자리 전화번호 입력됨, 23자리 전화번호는 입력 오류(설정된 varchar20을 초과했기때문)
+   -> 오류발생하면 메서드 호출 종료(요청 처리 중단.)
+   -> dbms에 임시보관 없이 테이블에 데이터 변경 즉시 적용
+
+- 데이터 처리 중 오류 발생 시 대응 방법
+  - 데이터 변경작업(입력,수정,삭제)에 대한 처리 방법
+    - 1. 데이터 처리 작업 중 일부 작업이 실패하더라도 그전에 수행한 작업은 그대로 승인하는 경우.
+    - 2. 데이터 처리 작업 중 일부 작업에 오류 발생 시 그전에 수행한 작업을 모두 취소해야 하는 경우.
+    ex) 좌석 예약 : 결제실패 -> 예약취소, 일부좌석 예약 실패 -> 전체예약 취소
+        주문 : 결제실패 -> 주문취소
+      -> 모든 데이터 변경작업이 정상적으로 수행되거나, 모두 취소되는 상황 : 트랜잭션 적용이 필요
+    
+- 트랜잭션 적용 후
+  - 여러개의 데이터 조작 작업(manipulation - 입력/변경/삭제)을 한 단위로 묶은 것(데이터 처리가 단위별로 수행된다.)
+  - 단위에 묶인 모든 작업이 성공하면 db에 적용
+  - commit전까진 dbms에 임시보관
+  ![](./images/2022-03-21-10-09-28.png)
+
+- 트랜잭션을 설정한다.
+  - @EnableTransactionManagement 설정 추가
+  - Annotation으로 트랜잭션을 제어할 수 있게 한다.
+- 트랜잭션 관리자 객체 준비
+  
+- 트랜잭션을 적용한다.
+  - com.eomcs.mylist.controller.ContactController 클래스 변경
+    - add() 메서드에 트랜잭션 적용
+
+  - Spring에서 트랜잭션 적용하기
+
+- Spring Boot
+![](./images/2022-03-21-11-41-57.png)
+
+- 서비스 객체 도입(업무관련 코드와 트랜잭션 관련 코드를 캡슐화)
+ - 이전 방식
+   - ContactController(요청된 파라미터 분석, 클라이언트에게 응답 데이터 가공(JSON데이터))에 요청 -> ContactDao에서 데이터처리 -> Mybatis -> JDBC Driver -> DBMS에서 작업 완료하여 사용자에게 리턴
