--- a/memo/비트캠프필기.md
+++ b/memo/비트캠프필기.md
@@ -3434,3 +3434,7 @@ select 컬럼명 as 변경할 컬럼명 from 테이블명;
 - 서비스 객체 도입(업무관련 코드와 트랜잭션 관련 코드를 캡슐화)
  - 이전 방식
    - ContactController(요청된 파라미터 분석, 클라이언트에게 응답 데이터 가공(JSON데이터))에 요청 -> ContactDao에서 데이터처리 -> Mybatis -> JDBC Driver -> DBMS에서 작업 완료하여 사용자에게 리턴
+
+# 2022년 04월 01일
+
+ㄴㅁㅇㅁㄴㅇ
